--- a/src/style/stylesheet.css
+++ b/src/style/stylesheet.css
@@ -29,6 +29,12 @@
   border-radius: 24px;
 }
 
+#img-banner {
+  object-fit: cover;
+  width: 100%;
+  height: 500px;
+}
+
 #contents {
   padding: 2em;
 }
@@ -57,16 +63,8 @@
 }
 
 @media screen and (max-width: 1400px) {
-  #carousel-right {
-    display: none;
-  }
-
   #carousel {
     padding: 2em 1em;
-  }
-
-  #carousel-left-caption {
-    padding: 0 1em;
   }
 
   #carousel-left-button {
